=======
CHANGES
=======

3.5.3 (unreleased)
------------------


3.5.2 (2010-04-30)
------------------

- Removed use of 'zope.testing.doctestunit' in favor of stdlib's 'doctest.

3.5.1 (2010-04-10)
------------------

- LP #257657 / 489529:  Fix memory leak in C extension.

- Fixed the compilation of the C extension with python 2.6: refactored it as a
  setuptools Feature.

3.5.0 (2009-06-27)
------------------

- Made compilation of C extension optional.

- Added support to bootstrap on Jython.

- Changed package's mailing list address from zope3-dev at zope.org to
  zope-dev at zope.org, because zope3-dev is now retired.

- Reformatted change log to common formatting style.

- Update package description and docs a little.

- Remove old .cfg files for zpkg.

3.4.3 (2007-09-26)
------------------

- Make PyPI the home URL.

3.4.2 (2007-09-25)
------------------

- Moved the ``ZopeMessageFactory`` from ``zope.app.i18n`` to this package.

3.4.0 (2007-07-19)
------------------

- Remove incorrect dependency.

- Create final release to reflect package status.

3.2.0 (2006-01-05)
------------------

- Corresponds to the verison of the zope.i18nmessageid package shipped as
  part of the Zope 3.2.0 release.

- Implemented 'zope.i18nmessageid.message' as a C extension.

- Deprecated 'zope.i18nmessageid.messageid' APIs ('MessageID',
  'MessageIDFactory') in favor of replacements in 'zope.i18nmessageid.message'
  ('Message', 'MessageFactory').  Deprecated items are scheduled for removal
  in Zope 3.3.

3.0.0 (2004-11-07)
------------------

- Corresponds to the verison of the zope.i18nmessageid package shipped as
  part of the Zope X3.0.0 release.