@@ -20,21 +20,46 @@
 """
 
 import os
+import sys
 
-from setuptools import setup, find_packages, Extension, Feature
+from setuptools import setup, find_packages, Extension
+from distutils.command.build_ext import build_ext
+from distutils.errors import CCompilerError
+from distutils.errors import DistutilsExecError
+from distutils.errors import DistutilsPlatformError
 
 def read(*rnames):
     return open(os.path.join(os.path.dirname(__file__), *rnames)).read()
 
-codeoptimization = Feature("Optional code optimizations",
-    standard=True,
-    ext_modules=[
-        Extension("zope.i18nmessageid._zope_i18nmessageid_message", [
-            os.path.join('src', 'zope', 'i18nmessageid',
-                "_zope_i18nmessageid_message.c")
-        ]),
-    ],
-)
+class optional_build_ext(build_ext):
+    """This class subclasses build_ext and allows
+       the building of C extensions to fail.
+    """
+    def run(self):
+        try:
+            build_ext.run(self)
+        
+        except DistutilsPlatformError, e:
+            self._unavailable(e)
+
+    def build_extension(self, ext):
+       try:
+           build_ext.build_extension(self, ext)
+        
+       except (CCompilerError, DistutilsExecError), e:
+           self._unavailable(e)
+
+    def _unavailable(self, e):
+        print >> sys.stderr, '*' * 80
+        print >> sys.stderr, """WARNING:
+
+        An optional code optimization (C extension) could not be compiled.
+
+        Optimizations for this package will not be available!"""
+        print >> sys.stderr
+        print >> sys.stderr, e
+        print >> sys.stderr, '*' * 80
+
 
 setup(name='zope.i18nmessageid',
     version = '3.5.3dev',
@@ -63,9 +88,16 @@ setup(name='zope.i18nmessageid',
     url='http://pypi.python.org/pypi/zope.i18nmessageid',
     packages=find_packages('src'),
     package_dir = {'': 'src'},
-    features = {'codeoptimization': codeoptimization},
+    ext_modules=[
+        Extension("zope.i18nmessageid._zope_i18nmessageid_message",
+                  [os.path.join('src', 'zope', 'i18nmessageid',
+                                "_zope_i18nmessageid_message.c") ]),
+        ],
     namespace_packages=['zope',],
     install_requires=['setuptools'],
     include_package_data = True,
+    test_suite='zope.i18nmessageid.tests.test_suite',
     zip_safe = False,
-)
+    cmdclass = {'build_ext':optional_build_ext},
+    )
+
